
2010-05-31
- Makefile: (vriviere)
   -> Replaced recursive calls to make by $(MAKE). Replaced -Xlinker by -Wl.
   -> Removed useless command chainings with the shell's ';'.
   -> Added UNIQUE initialization to avoid warnings when
      --warn-undefined-variables is used.
   -> Disabled the useless "Entering directory" messages, since the current
      directory is never changed.

2010-06-06
- desk/deskmain.c, aes/gemdisp.c, aes/geminit.c: Added some debug messages
  and the defines DBG_DESKMAIN, DBG_GEMDISP and DBG_GEMINIT. (vriviere)

2010-06-06
- aes/gemasm.S, aes/gemdosif.S, aes/gemstart.S, aes/gsx2.S, aes/large.S,
  bdos/rwa.S, bios/aciavecs.S, bios/bios.c, bios/cookie.h, bios/initinfo.c,
  bios/kprint.c, bios/kprintasm.S, bios/linea.S, bios/machine.c,
  bios/memory.S, bios/natfeat.S, bios/panicasm.S, bios/processor.S,
  bios/startup.S, bios/tosvars.S, bios/vectors.S, cli/coma.S, include/asm.h,
  include/config.h, util/memmove.S, util/memset.S, util/miscasm.S,
  util/nlsasm.S, util/stringasm.S, vdi/vdi_asm.S, vdi/vdi_raster.c,
  vdi/vdi_tblit.S: Added ColdFire V4e CPU support. (vriviere)
- Makefile: Added the COLDFIRE variable. Set it to 1 to build a ROM version
  compatible only with ColdFire V4e processors. (vriviere)

2010-06-13
- bios/bios.c, bios/initinfo.c, bios/initinfo.h:
  Clear the screen on reboot. (vriviere)

2010-06-13
- bios/gemasm.S: Changed the dsptch/switchto implementation to switch the
  AES tasks using a standard RTS rather than a CPU dependent RTE. (vriviere)

2010-06-15
- bdos/proc.c: Start new processes in the standard IPL 3. (vriviere)

2010-06-15
- desk/deskstart.S: Run the desktop in user mode. (vriviere)

2010-06-15
- desk/deskact.c: Fixed crash when moving icons. (vriviere)

2010-06-19
- bios/processor.S: Implemented invalidate_icache() for ColdFire. (vriviere)

2010-06-19
- cli/coma.S: Run EmuCON in user mode. (vriviere)

2010-08-02
- bios/conout.c: Fixed crash on reverse scrolling. (vriviere)