@@ -2255,3 +2255,5 @@ Start... early ages
 
 2010-08-02
 - bios/conout.c: Fixed crash on reverse scrolling. (vriviere)
+- bdos/fs.h, bdos/fsdir.c: VFAT long file names are now totally ignored
+  and are no longer displayed as invalid files. (vriviere)
